- Better logic for grouping units on right click menu
- Option to let units move after airdropping

* RELEASE 9
- Perfume can be applied to multiple improvements or unit types
- Corruption can be completely removed with "OFF" government setting
- Press P in city screen to see AI point value for each available build
- Press L on map to see how desirable the AI finds each tile as a city location
- AI naval invasion forces can include artillery (with offensive artillery AI enabled)
- Option to disable worker automation
- Disallow land settlers from founding on water
- Warn in case perfume target doesn't match any unit or improvement name
- Fix tile coords replacing resource name in the info box on the Steam version
- Proper movement check for replacement army inclusion criteria

* RELEASE 8
- Stack fortify, upgrade, and disband
- AI routine for "pop units" that may appear in mods
- Group units on right click menu
- Show coordinates and chopped status in tile info box
- Show golden age turns remaining
- Trespassing prevention (experimental)
- Land/sea intersections
- Adjustable anarchy length
- "Perfume" an improvement to make it more appealing to the AI
- No special king unit names in non-regicide games
- Stack worker commands apply across unit types

* RELEASE 7
- Buttons on trade screen to quickly switch between civs
- Ask/offer gold popup autofills best amount
- Adjustable minimum city distance

* RELEASE 6
- Add option to increase AI artillery and bomber production
- Allow AI to grab artillery escorts from city defenders so its arty can be used in the field
- Improve leader unit AI: fix bug allowing rush of any city build, prefer forming armies, select better rush targets
- Improve AI army inclusion criteria: exclude HN & defensive units, fix movement check
- Fix for immobile unit disembark crash
- Fix for for houseboat bug
- Set LAA bit when creating modded EXE

* RELEASE 5
- Stack worker commands
- Skip repeated popups asking to replace a tile improvement