@@ -61,6 +61,7 @@ patch_science_age_bug = true
 patch_pedia_texture_bug = true
 patch_disembark_immobile_bug = true
 patch_houseboat_bug = true
+patch_intercept_lost_turn_bug = true
 
 [=========================]
 [=== ENGINE EXTENSIONS ===]
